# enpm702-fall-2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap_lecture6.sh  readthedocs.yml
docs/: requirements.txt
docs/source/: assignments.rst  conf.py  index.rst  overview.rst
docs/source/_static/: custom.css  furo-overrides.css  no_auto_theme.js
docs/source/_static/pseudocode/: pseudocode.css  pseudocode.js
docs/source/assignments/: rwaIII.rst  rwaIV.rst
docs/source/lecture6/: callables.rst  exercises.rst  function_specifiers.rst  glossary.rst  introduction.rst  lecture6.rst  notes.rst  references.rst  struct.rst  templates.rst
docs/source/lecture6/callables/: function_pointers.rst  functors.rst  lambdas.rst  std_function.rst
docs/source/lecture6/function_specifiers/: attributes.rst  constexpr.rst  decltype.rst  inline.rst  noexcept.rst  trailing_return.rst
docs/source/lecture6/templates/: deduction.rst  overview.rst  specialization.rst  syntax.rst
docs/source/lecture7/: exercises.rst  glossary.rst  lecture7.rst  move_semantics.rst  notes.rst  references.rst  smart_pointers.rst
docs/source/lecture7/smart_pointers/: shared_pointers.rst  unique_pointers.rst  weak_pointers.rst
docs/source/lecture8/: classes_and_objects.rst  constructors.rst  core_principles.rst  design.rst  encapsulation.rst  exercises.rst  lecture8.rst  modern_cpp_features.rst  references.rst  static_member.rst  this_pointer.rst
docs/source/lecture8/design/: modeling.rst  requirement_analysis.rst
reading_material/: CMakeLists.txt
reading_material/src/: rm.cpp
rwa2_starter/: CMakeLists.txt
rwa2_starter/include/: sensor_types.hpp
rwa2_starter/src/: main.cpp
rwa3_starter/: CMakeLists.txt
rwa3_starter/include/: robot_control.hpp  robot_kinematics.hpp  robot_types.hpp
rwa3_starter/src/: main.cpp  robot_control.cpp  robot_types.cpp
rwa4_starter/: CMakeLists.txt
rwa4_starter/include/: maze_api.hpp
rwa4_starter/src/: main.cpp  maze_api.cpp
week1/: CMakeLists.txt
week1/docs/: Doxyfile
week1/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  lecture1_8hpp_source.html  navtreedata.js  navtreeindex0.js  week1_8cpp.html  week1_8cpp.js
week1/docs/html/search/: all_1.js  functions_0.js
week1/src/: week1.cpp
week2/: CMakeLists.txt  week2_cpp
week2/src/: week2.cpp  week2_exercise.cpp
week3/: CMakeLists.txt
week3/src/: week3.cpp  week3_exercise.cpp
week4/: CMakeLists.txt
week4/src/: week4.cpp
week5/: CMakeLists.txt  week5_exe
week5/include/: week5.hpp
week5/src/: main.cpp  week5.cpp
week6/: CMakeLists.txt
week6/include/: part1_template.hpp  week6.hpp
week6/src/: main.cpp  week6.cpp
week7/: CMakeLists.txt
week7/include/: week7.hpp
week7/src/: main.cpp  week7.cpp
week8/: CMakeLists.txt
week8/diagram/: class_diagram.plantuml  sequence_diagram.plantuml  state_machine_diagram.plantuml  system_architecture_diagram.plantuml
week8/include/: vehicle.hpp
week8/src/: main.cpp  snippets.cpp  vehicle.cpp
week9/: CMakeLists.txt
week9/include/transportation/: driver.hpp  fleet.hpp  location.hpp  passenger.hpp  position.hpp  robo_taxi.hpp  route.hpp  sensor.hpp  sensor_type.hpp  taxi.hpp  vehicle.hpp  vehicle_status.hpp
week9/src/: main.cpp
week9/src/snippets/: main.cpp
week9/src/transportation/: fleet.cpp  location.cpp  main.cpp  passenger.cpp  robo_taxi.cpp  route.cpp  sensor.cpp  taxi.cpp  vehicle.cpp
